# whispo

./: Cargo.toml  README.md
.github/: release-template.md
.github/workflows/: release.yml
crates/whis-cli/: Cargo.toml
crates/whis-cli/src/: main.rs  service.rs
crates/whis-core/src/: audio.rs  lib.rs
crates/whis-desktop/: tauri.conf.json
crates/whis-desktop/packaging/linux/: ink.whis.Whis.desktop  ink.whis.Whis.metainfo.xml
crates/whis-desktop/ui/: package.json
docs/: CNAME  index.html  styles.css
src/: audio.rs  clipboard.rs  hotkey.rs  ipc.rs  main.rs  service.rs  transcribe.rs
