[package]
name = "whispo"
version = "0.4.0"
edition = "2024"
authors = ["Frank Dierolf <frank_dierolf@web.de>"]
description = "Voice-to-text CLI for terminal users using OpenAI Whisper API"
license = "MIT"
repository = "https://github.com/frankdierolf/whispo"
homepage = "https://github.com/frankdierolf/whispo"
keywords = ["voice", "transcription", "whisper", "cli", "audio"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
cpal = "0.16"
hound = "3.5.1"
reqwest = { version = "0.12.24", features = ["blocking", "multipart"] }
tokio = { version = "1.48", features = ["full"] }
arboard = "3.6.1"
dotenvy = "0.15.7"
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5.53", features = ["derive"] }
rdev = { version = "0.5", features = ["unstable_grab"] }
