[workspace]
resolver = "2"
members = ["crates/whis-core", "crates/whis-cli", "crates/whis-desktop"]

[workspace.package]
version = "0.5.7"
edition = "2024"
authors = ["Frank Dierolf <frank_dierolf@web.de>"]
license = "MIT"
repository = "https://github.com/frankdierolf/whis"
homepage = "https://whis.ink"

[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "multipart", "rustls-tls"] }
cpal = "0.16"
hound = "3.5"
arboard = { version = "3.6", features = ["wayland-data-control"] }
dotenvy = "0.15"
clap = { version = "4.5", features = ["derive"] }
rdev = { version = "0.5", features = ["unstable_grab"] }
global-hotkey = "0.7"
crossbeam-channel = "0.5"
interprocess = "2"
whis-core = { path = "crates/whis-core", version = "0.5.7" }
